vlib/v/checker/tests/type_exists_err.out
vlib/v/checker/tests/type_exists_err.vv:3:1: error: cannot register alias `Foo`, another type with this name exists
    1 | struct Foo {}
    2 | 
    3 | type Foo = Foo
      | ~~~~~~~~
    4 | 
    5 | type Foo = string
vlib/v/checker/tests/type_exists_err.vv:5:1: error: cannot register alias `Foo`, another type with this name exists
    3 | type Foo = Foo
    4 | 
    5 | type Foo = string
      | ~~~~~~~~
    6 | 
    7 | type Foo = int | string
vlib/v/checker/tests/type_exists_err.vv:7:1: error: cannot register sum type `Foo`, another type with this name exists
    5 | type Foo = string
    6 | 
    7 | type Foo = int | string
      | ~~~~~~~~
    8 | 
    9 | enum Foo {
vlib/v/checker/tests/type_exists_err.vv:9:1: error: cannot register enum `Foo`, another type with this name exists
    7 | type Foo = int | string
    8 | 
    9 | enum Foo {
      | ~~~~~~~~
   10 |     @none
   11 | }
