vlib/v/checker/tests/type_exists_err.vv
struct Foo {}

type Foo = Foo

type Foo = string

type Foo = int | string

enum Foo {
	@none
}
